# retail-scrapers

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SECURITY.zh-CN.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: adapter_maintenance.yml  bug_report.yml  channel_request.yml  config.yml
.github/workflows/: ci.yml  live-smoke.yml  release.yml
docs/: add-channel.md  api-discovery-playbook.md  api-discovery-playbook.zh-CN.md  architecture.md  automation.md  automation.zh-CN.md  channel-health.md  channel-health.zh-CN.md  downstream-usage.md  downstream-usage.zh-CN.md  new-channel-demo.md  release.md  showcase.md  showcase.zh-CN.md  新增渠道.md  新增渠道demo.md  架构说明.md
examples/: catalog_demo.md  output.example.csv  output.example.jsonl  price_demo.md  products.example.csv  python_usage.py
examples/github-actions/: scheduled-scrape.yml
src/retail_scrapers/: __init__.py  cli.py  doctor.py  errors.py  health.py  input.py  models.py  options.py  output.py  registry.py  runner.py  scaffold.py  schema.py  validation.py
src/retail_scrapers/adapters/: __init__.py  base.py
src/retail_scrapers/core/: __init__.py  browser.py  pricing.py
tests/: test_automation_examples.py  test_boulanger_adapter.py  test_cli.py  test_community_files.py  test_currys_adapter.py  test_docs_showcase.py  test_doctor.py  test_elkjop_adapter.py  test_health.py  test_io.py  test_pricing.py  test_registry.py  test_scaffold.py  test_schema.py  test_validation.py
(+8 files in other folders)
