[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "retail-scrapers"
version = "0.1.0"
description = "Ready-to-run scrapers for real-world retail websites."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = []
keywords = ["scraping", "retail", "playwright", "catalog", "price"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "playwright>=1.50,<2",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.11,<1",
]

[project.scripts]
retail-scrape = "retail_scrapers.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/retail_scrapers"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
